--- a/src/styles/modules/_contact.module.scss
+++ b/src/styles/modules/_contact.module.scss
@@ -1,7 +1,7 @@
 .contact {
-  padding: 1rem;
-  display: flex;
   justify-content: center;
+  display: flex;
+  padding: 1rem;
 
   .send-message {
     text-align: center;
@@ -10,11 +10,10 @@
 
   button {
     filter: brightness(1);
-    transition: filter 0.5s;
+    transition: filter 0.4s ease-in;
   }
 
   button:hover {
-    filter: brightness(0.85);
-    transition: filter 0.5s;
+    filter: brightness(0.8);
   }
 }
