--- a/src/styles/modules/_footer.module.scss
+++ b/src/styles/modules/_footer.module.scss
@@ -1,35 +1,32 @@
 .footer {
   text-align: center;
-  padding: 1.5rem 4rem 1.5rem 0rem;
   justify-content: center;
   display: flex;
+  padding: 1.5rem 3rem 1.5rem 0rem;
   gap: 6rem;
   background: #003b46;
 
   .github-section {
-    
     background: url("../../assets/github_logo.png") no-repeat;
     width: 17px;
     height: 17px;
+    align-self: center;
     background-size: cover;
     border-radius: 10px;
-    align-self: center;
     filter: invert(1);
 
     a {
-      color: white;
       text-decoration: none;
-      filter: invert(1);
-      //padding: 0rem 0rem 0rem 1.5rem;
       margin: 0 0 0 1.5rem;
-
+      filter: invert(1);
+      color: white;
+      
       box-shadow: none;
-      transition: box-shadow 0.4s;
+      transition: box-shadow 0.4s ease-in;
     }
 
     a:hover {
       box-shadow: 0 2px white;
-      transition: box-shadow 0.8s;
     }
   }
 
@@ -37,25 +34,23 @@
     background: url("../../assets/twitter_logo.png") no-repeat;
     width: 17px;
     height: 17px;
+    align-self: center;
     background-size: cover;
     border-radius: 10px;
-    align-self: center;
     filter: invert(1);
     
     a {
-      color: white;
       text-decoration: none;
-      filter: invert(1);
-      //padding: 0rem 0rem 0rem 1.5rem;
       margin: 0 0 0 1.5rem;
-
+      filter: invert(1);
+      color: white;
+      
       box-shadow: none;
-      transition: box-shadow 0.4s;
+      transition: box-shadow 0.4s ease-in;
     }
     
     a:hover {
       box-shadow: 0 2px white;
-      transition: box-shadow 0.8s;
     }
   }
 }
