--- a/src/styles/modules/_myPortfolio.module.scss
+++ b/src/styles/modules/_myPortfolio.module.scss
@@ -1,11 +1,10 @@
 .container {
-  padding: 0.5rem;
   align-items: center;
-
+  justify-content: center;
+  padding: 0.5rem;
   display: flex;
   gap: 5rem;
-  justify-content: center;
-
+  
   .github-card {
     font-size: 18px;
 
@@ -17,7 +16,7 @@
     }
 
     object {
-      filter: saturate(120%) brightness(90%) /*invert(1)*/;
+      filter: saturate(120%) brightness(82%);
       border-radius: 4px;
     }
   }
