--- a/src/styles/modules/_myResume.module.scss
+++ b/src/styles/modules/_myResume.module.scss
@@ -7,6 +7,8 @@
   .line {
     border-bottom: 2px solid white;
     padding: 0.5rem;
+    margin: auto;
+    width: 100%;
   }
 
   .education-item {
