--- a/src/styles/modules/_navBar.module.scss
+++ b/src/styles/modules/_navBar.module.scss
@@ -1,29 +1,24 @@
 .navbar {
-  background: #003b46;
-  padding: 2.5rem 0rem;
-  position: fixed;
-  width: 100%;
-  
   text-align: center;
-  margin: 0;
-
+  background: #003b46;
+  padding: 2rem 0rem;
+  position: fixed;
+  width: 100vw;
   z-index: 1;
 
   a {
-    //padding: 15px 20px;
     margin: 0 20px;
-    text-transform: uppercase;
     text-decoration: none;
-    color: white;
+    text-transform: uppercase;
     font-weight: 600;
+    color: white;
 
     box-shadow: none;
-    transition: box-shadow 0.4s;
+    transition: box-shadow 0.4s ease-in;
   }
 
   a:hover {
     box-shadow: 0 2px white;
-    transition: box-shadow 0.8s;
   }
 }
 
@@ -44,18 +39,18 @@
   
     a {
       margin: 0 10px;
-      font-size: 10px;
+      font-size: 12px;
     }
   }
 }
 
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 370px) {
   .navbar {
     padding: 1rem 0rem;
   
     a {
       margin: 0 7px;
-      font-size: 4px;
+      font-size: 10px;
     }
   }
 }
@@ -67,5 +62,11 @@
     a {
       margin: 0 4px;
     }
+  }
+}
+
+@media screen and (max-width: 250px) {
+  .navbar {
+    display: none;
   }
 }
